--- a/index.html
+++ b/index.html
@@ -1216,7 +1216,7 @@
                   <div class="gallery-item">
                     <a class="gallery-link lightbox-item" href="assets/images/product_img.png" data-fancybox="gallery-1"
                       data-caption="يتم كتابة نص هنا">
-                      <img class="img-fluid" src="assets/images/product_img.png" />
+                      <img class="img-fluid" src="assets/images/product_img.png" alt="" />
 
                       <img src="assets/images/icons/search_light.png" alt="search light" class="gallery-icon" />
 
@@ -1398,12 +1398,12 @@
                             والسبت</span>
                         </div>
                         <div class="info-item social-item justify-content-center">
-                          <a class="item-icon social-link" href="#" title="whatsapp">
+                          <a class="item-icon social-link" href="#" title="Whatsapp" aria-label="whatsapp">
                             <img src="assets/images/icons/whatsapp.png" alt="whatsapp" />
                           </a>
-                          <a class="item-icon social-link" href="#" title="facebook">
+                          <a class="item-icon social-link" href="#" title="Facebook" aria-label="facebook">
                             <img src="assets/images/icons/facebook.png" alt="facebook" />
-                            <a class="item-icon social-link" href="#" title="twitter">
+                            <a class="item-icon social-link" href="#" title="Twitter" aria-label="twitter">
                               <img src="assets/images/icons/twitter_cut.png" alt="twitter" />
                             </a>
                         </div>
