--- a/products.html
+++ b/products.html
@@ -5,6 +5,9 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="theme-color" content="#009536" />
+  <meta name="description" content="vegetable" />
+  <meta name="keywords" content="vegetable">
+  <meta name="author" content="vegetable">
 
   <title>vegetable</title>
 
