--- a/index.html
+++ b/index.html
@@ -1834,6 +1834,42 @@
           <div class="item-wrap">
             <div class="item-img">
               <a class="d-block" href="#">
+                <img class="img-fluid" src="assets/images/card_img.png" alt="productName" loading="lazy" />
+              </a>
+            </div>
+
+            <div class="item-details">
+              <a class="item-name" href="#">اسم المنتج</a>
+
+              <p class="item-price">153ش</p>
+
+              <button class="del-item" type="button">
+                <img src="assets/images/icons/trash.png" alt="trash icon" />
+              </button>
+            </div>
+          </div>
+
+          <div class="item-wrap">
+            <div class="item-img">
+              <a class="d-block" href="#">
+                <img class="img-fluid" src="assets/images/card_img.png" alt="productName" loading="lazy" />
+              </a>
+            </div>
+
+            <div class="item-details">
+              <a class="item-name" href="#">اسم المنتج</a>
+
+              <p class="item-price">153ش</p>
+
+              <button class="del-item" type="button">
+                <img src="assets/images/icons/trash.png" alt="trash icon" />
+              </button>
+            </div>
+          </div>
+
+          <div class="item-wrap">
+            <div class="item-img">
+              <a class="d-block" href="#">
                 <img class="img-fluid" src="assets/images/buy_img.png" alt="productName" loading="lazy" />
               </a>
             </div>
