--- a/index.html
+++ b/index.html
@@ -1870,20 +1870,25 @@
           id="pills-menu" role="tabpanel" aria-labelledby="pills-menu-tab">
           <ul class="mobile-menu">
             <li class="mobile-menu-item">
-              <a class="mobile-menu-link" href="index.html">الرئيسية</a>
-            </li>
+              <a class="mobile-menu-link" href="products.html">
+                <img src="assets/images/icons/lettuce.png" alt="harvest" />
 
-            <li class="mobile-menu-item">
-              <a class="mobile-menu-link" href="products.html">منتجاتنا</a>
+                عنوان القسم عنوان القسم
               </a>
             </li>
-
             <li class="mobile-menu-item">
-              <a class="mobile-menu-link" href="#">اتصل بنا</a>
+              <a class="mobile-menu-link" href="products.html">
+                <img src="assets/images/icons/peanut.png" alt="harvest" />
+
+                عنوان القسم عنوان القسم
+              </a>
             </li>
-
             <li class="mobile-menu-item">
-              <a class="mobile-menu-link" href="#">من نحن </a>
+              <a class="mobile-menu-link" href="products.html">
+                <img src="assets/images/icons/spray.png" alt="harvest" />
+
+                عنوان القسم عنوان القسم
+              </a>
             </li>
           </ul>
         </div>
