--- a/index.html
+++ b/index.html
@@ -1846,7 +1846,7 @@
   </div>
   <!-- End cart-panel  -->
 
-  <!-- **** mobile-menu ***** -->
+  <!-- **** product-menu ***** -->
   <div class="mobile-menu-wrapper">
     <div class="mobile-menu-container tabs-content-area menu-product">
       <ul class="nav nav-pills mobile-nav-tabs" id="pills-tab" role="tablist">
