--- a/products.html
+++ b/products.html
@@ -1844,7 +1844,7 @@
   </div>
   <!-- End cart-panel  -->
 
-  <!-- **** mobile-menu ***** -->
+  <!-- **** product-menu ***** -->
   <div class="mobile-menu-wrapper">
     <div class="mobile-menu-container tabs-content-area menu-product">
       <ul class="nav nav-pills mobile-nav-tabs" id="pills-tab" role="tablist">
@@ -1864,24 +1864,29 @@
       </ul>
 
       <div class="mobile-menu-tabs-content tab-content" id="pills-tabContent">
-        <div class="tab-pane fade active show mobile-menu-tab-pane nav-content tab-content mobile-main-menu"
+        <div class="tab-pane fade active show mobile-menu-tab-pane tab-content mobile-main-menu"
           id="pills-menu" role="tabpanel" aria-labelledby="pills-menu-tab">
           <ul class="mobile-menu">
             <li class="mobile-menu-item">
-              <a class="mobile-menu-link" href="index.html">الرئيسية</a>
-            </li>
+              <a class="mobile-menu-link" href="products.html">
+                <img src="assets/images/icons/lettuce.png" alt="harvest" />
 
-            <li class="mobile-menu-item">
-              <a class="mobile-menu-link" href="products.html">منتجاتنا</a>
+                عنوان القسم عنوان القسم
               </a>
             </li>
-
             <li class="mobile-menu-item">
-              <a class="mobile-menu-link" href="#">اتصل بنا</a>
+              <a class="mobile-menu-link" href="products.html">
+                <img src="assets/images/icons/peanut.png" alt="harvest" />
+
+                عنوان القسم عنوان القسم
+              </a>
             </li>
-
             <li class="mobile-menu-item">
-              <a class="mobile-menu-link" href="#">من نحن </a>
+              <a class="mobile-menu-link" href="products.html">
+                <img src="assets/images/icons/spray.png" alt="harvest" />
+
+                عنوان القسم عنوان القسم
+              </a>
             </li>
           </ul>
         </div>
