--- a/finsh-order.html
+++ b/finsh-order.html
@@ -144,21 +144,39 @@
     <!-- **** mobile-menu ***** -->
     <div class="mobile-menu-wrapper">
       <div class="mobile-menu-container tabs-content-area mobile-menu">
-        <div class="menu-search">
+        <div class="menu-search-mobile">
           <form action="">
-            <div class="menu-search-form">
-              <input type="search" placeholder="ما الذي تبحث عنه؟" />
+            <div class="menu-search-mobile-form border-0">
+              <input type="search" class="border-0" placeholder="ما الذي تبحث عنه؟" />
 
-              <button class="search-btn">
-                بحث
+              <button class="menu-search-mobile-btn">
+                <img src="assets/images/icons/search_light.png" alt="search" />
               </button>
             </div>
           </form>
         </div>
 
-        <div class="mobile-menu-tabs-content tab-content">
+        <ul class="nav nav-pills mobile-menu-nav-tabs" id="pills-tab" role="tablist">
+          <li class="nav-item flex-grow-1 " role="presentation">
+            <button class="mobile-tab tab-btn w-100 active" id="pills-mobile-menu-tab" data-bs-toggle="pill"
+              data-bs-target="#pills-mobile-menu" type="button" role="tab" aria-controls="pills-mobile-menu"
+              aria-selected="true">
+              القائمة
+            </button>
+          </li>
 
-          <div class="mobile-menu-tab-pane tab-content mobile-main-menu">
+          <li class="nav-item flex-grow-1 " role="presentation">
+            <button class="mobile-tab tab-btn w-100" id="pills-category-tab" data-bs-toggle="pill"
+              data-bs-target="#pills-category" type="button" role="tab" aria-controls="pills-category"
+              aria-selected="true">
+              الاقسام
+            </button>
+          </li>
+        </ul>
+
+        <div class="mobile-menu-tabs-content tab-content" id="pills-tabContent">
+          <div class="tab-pane mobile-menu-tab-pane tab-content mobile-main-menu fade active show" id="pills-mobile-menu"
+          role="tabpanel" aria-labelledby="pills-mobile-menu-tab">
             <ul class="mobile-menu">
               <li class="mobile-menu-item">
                 <a class="mobile-menu-link" href="index.html">الرئيسية</a>
@@ -174,7 +192,34 @@
               </li>
 
               <li class="mobile-menu-item">
-                <a class="mobile-menu-link" href="#">من نحن </a>
+                <a class="mobile-menu-link" href="about.html">من نحن </a>
+              </li>
+            </ul>
+          </div>
+
+          <div class="tab-pane mobile-menu-tab-pane tab-content mobile-main-menu fade" id="pills-category"
+            role="tabpane2" aria-labelledby="pills-category-tab">
+            <ul class="mobile-menu">
+              <li class="mobile-menu-item">
+                <a class="mobile-menu-link" href="products.html">
+                  <img src="assets/images/icons/lettuce.png" alt="harvest" />
+
+                  عنوان القسم عنوان القسم
+                </a>
+              </li>
+              <li class="mobile-menu-item">
+                <a class="mobile-menu-link" href="products.html">
+                  <img src="assets/images/icons/peanut.png" alt="harvest" />
+
+                  عنوان القسم عنوان القسم
+                </a>
+              </li>
+              <li class="mobile-menu-item">
+                <a class="mobile-menu-link" href="products.html">
+                  <img src="assets/images/icons/spray.png" alt="harvest" />
+
+                  عنوان القسم عنوان القسم
+                </a>
               </li>
             </ul>
           </div>
@@ -189,7 +234,7 @@
 
   <main>
     <section class="finish-order-section nav-padding">
-      <div class="container">
+      <div class="custom-container">
         <div class="finish-order-area">
           <div class="row">
             <div class="col-xxl-4 col-lg-6">
@@ -245,11 +290,59 @@
 
                         <div class="cart-action-btn">
                           <button class="btn-action">
-                            <img src="assets/images/icons/shopping-cart.svg" alt="cart icon" class="cart-icon" />
+                            <img src="assets/images/icons/edit.svg" alt="cart icon" class="cart-icon" />
                           </button>
 
                           <button class="btn-action">
-                            <img src="assets/images/icons/check.png" alt="check icon" class="check-icon" />
+                            <img src="assets/images/icons/close.png" alt="check icon" class="check-icon" />
+                          </button>
+                        </div>
+                      </div>
+                    </div>
+
+                    <div class="product-card">
+                      <div class="product-img">
+                        <img src="assets/images/card_img.png" alt="product" loading="lazy" />
+                      </div>
+
+                      <div class="card-body">
+                        <h2 class="card-title">اسم المنتج جزر</h2>
+
+                        <div class="card-items">
+                          <p class="card-price">4.15 شيكل للكيلوغرام</p>
+                        </div>
+
+                        <div class="card-btns">
+                          <div class="counter">
+                            <a href="#" class="count-btn plus">
+                              <img src="assets/images/icons/plus.png" alt="plus icon" />
+                            </a>
+
+                            <input type="text" value="1" class="count-value" />
+
+                            <a href="#" class="count-btn minus">
+                              <img src="assets/images/icons/minus-sign.png" alt="minus icon" />
+                            </a>
+                          </div>
+
+                          <ul class="nav nav-pills mb-0" id="pills-tab" role="tablist">
+                            <li class="nav-item" role="presentation">
+                              <button class="nav-link active" id="pills-pill-tab" aria-expanded="true"
+                                data-bs-toggle="pill" data-bs-target="#pills-pill" type="button" role="tab"
+                                aria-controls="pills-pill" aria-selected="true" aria-label="الحبة">
+                                الحبة
+                              </button>
+                            </li>
+                          </ul>
+                        </div>
+
+                        <div class="cart-action-btn">
+                          <button class="btn-action">
+                            <img src="assets/images/icons/edit.svg" alt="cart icon" class="cart-icon" />
+                          </button>
+
+                          <button class="btn-action">
+                            <img src="assets/images/icons/close.png" alt="check icon" class="check-icon" />
                           </button>
                         </div>
                       </div>
@@ -303,11 +396,59 @@
 
                         <div class="cart-action-btn">
                           <button class="btn-action">
-                            <img src="assets/images/icons/shopping-cart.svg" alt="cart icon" class="cart-icon" />
+                            <img src="assets/images/icons/edit.svg" alt="cart icon" class="cart-icon" />
                           </button>
 
                           <button class="btn-action">
-                            <img src="assets/images/icons/check.png" alt="check icon" class="check-icon" />
+                            <img src="assets/images/icons/close.png" alt="check icon" class="check-icon" />
+                          </button>
+                        </div>
+                      </div>
+                    </div>
+
+                    <div class="product-card">
+                      <div class="product-img">
+                        <img src="assets/images/card_img.png" alt="product" loading="lazy" />
+                      </div>
+
+                      <div class="card-body">
+                        <h2 class="card-title">اسم المنتج جزر</h2>
+
+                        <div class="card-items">
+                          <p class="card-price">4.15 شيكل للكيلوغرام</p>
+                        </div>
+
+                        <div class="card-btns">
+                          <div class="counter">
+                            <a href="#" class="count-btn plus">
+                              <img src="assets/images/icons/plus.png" alt="plus icon" />
+                            </a>
+
+                            <input type="text" value="1" class="count-value" />
+
+                            <a href="#" class="count-btn minus">
+                              <img src="assets/images/icons/minus-sign.png" alt="minus icon" />
+                            </a>
+                          </div>
+
+                          <ul class="nav nav-pills mb-0" id="pills-tab" role="tablist">
+                            <li class="nav-item" role="presentation">
+                              <button class="nav-link" id="pills-kilo-tab" data-bs-toggle="pill"
+                                data-bs-target="#pills-kilo" type="button" role="tab" aria-controls="pills-kilo"
+                                aria-selected="false">
+                                الكيلو
+                              </button>
+                            </li>
+                          </ul>
+                        </div>
+
+                        <div class="cart-action-btn">
+                          <button class="btn-action">
+                            <img src="assets/images/icons/edit.svg" alt="cart icon" class="cart-icon" />
+                          </button>
+
+                          <button class="btn-action">
+                            <img src="assets/images/icons/close.png" alt="check icon" class="check-icon" />
                           </button>
                         </div>
                       </div>
@@ -1010,18 +1151,34 @@
   </div>
   <!-- End cart-panel  -->
 
-  <!-- **** mobile-menu ***** -->
+  <!-- product menu -->
   <div class="mobile-menu-wrapper">
-    <div class="mobile-menu-container tabs-content-area menu-product">
+    <div class="mobile-menu-container tabs-content-area menu-product position-relative pt-5">
+      <div class="custom-title mb-5">
+        <h1 class="section-title">العنوان</h1>
+      </div>
+
+      <div class="menu-search">
+        <form action="">
+          <div class="menu-search-form border-bottom-0 px-3 pb-3 pt-0">
+            <input type="search" placeholder="ما الذي تبحث عنه؟" />
+
+            <button class="search-btn">
+              بحث
+            </button>
+          </div>
+        </form>
+      </div>
+
       <ul class="nav nav-pills mobile-nav-tabs" id="pills-tab" role="tablist">
-        <li class="nav-item w-50" role="presentation">
+        <li class="nav-item flex-grow-1 " role="presentation">
           <button class="mobile-tab tab-btn w-100 active" id="pills-menu-tab" data-bs-toggle="pill"
             data-bs-target="#pills-menu" type="button" role="tab" aria-controls="pills-menu" aria-selected="true">
             المنتجات
           </button>
         </li>
 
-        <li class="nav-item w-50" role="presentation">
+        <li class="nav-item flex-grow-1 " role="presentation">
           <button class="mobile-tab tab-btn w-100" id="pills-home-tab" data-bs-toggle="pill"
             data-bs-target="#pills-home" type="button" role="tab" aria-controls="pills-home" aria-selected="true">
             القسم
@@ -1030,24 +1187,29 @@
       </ul>
 
       <div class="mobile-menu-tabs-content tab-content" id="pills-tabContent">
-        <div class="tab-pane fade active show mobile-menu-tab-pane nav-content tab-content mobile-main-menu"
-          id="pills-menu" role="tabpanel" aria-labelledby="pills-menu-tab">
+        <div class="tab-pane fade active show mobile-menu-tab-pane tab-content mobile-main-menu" id="pills-menu"
+          role="tabpanel" aria-labelledby="pills-menu-tab">
           <ul class="mobile-menu">
             <li class="mobile-menu-item">
-              <a class="mobile-menu-link" href="index.html">الرئيسية</a>
-            </li>
+              <a class="mobile-menu-link" href="products.html">
+                <img src="assets/images/icons/lettuce.png" alt="harvest" />
 
-            <li class="mobile-menu-item">
-              <a class="mobile-menu-link" href="products.html">منتجاتنا</a>
+                عنوان القسم عنوان القسم
               </a>
             </li>
-
             <li class="mobile-menu-item">
-              <a class="mobile-menu-link" href="#">اتصل بنا</a>
+              <a class="mobile-menu-link" href="products.html">
+                <img src="assets/images/icons/peanut.png" alt="harvest" />
+
+                عنوان القسم عنوان القسم
+              </a>
             </li>
-
             <li class="mobile-menu-item">
-              <a class="mobile-menu-link" href="#">من نحن </a>
+              <a class="mobile-menu-link" href="products.html">
+                <img src="assets/images/icons/spray.png" alt="harvest" />
+
+                عنوان القسم عنوان القسم
+              </a>
             </li>
           </ul>
         </div>
