--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
         </div>
 
         <ul class="nav nav-pills mobile-menu-nav-tabs" id="pills-tab" role="tablist">
-          <li class="nav-item flex-grow-1 " role="presentation">
+          <li class="nav-item" role="presentation">
             <button class="mobile-tab tab-btn w-100 active" id="pills-mobile-menu-tab" data-bs-toggle="pill"
               data-bs-target="#pills-mobile-menu" type="button" role="tab" aria-controls="pills-mobile-menu"
               aria-selected="true">
@@ -166,7 +166,7 @@
             </button>
           </li>
 
-          <li class="nav-item flex-grow-1 " role="presentation">
+          <li class="nav-item" role="presentation">
             <button class="mobile-tab tab-btn w-100" id="pills-category-tab" data-bs-toggle="pill"
               data-bs-target="#pills-category" type="button" role="tab" aria-controls="pills-category"
               aria-selected="true">
@@ -213,13 +213,40 @@
                   عنوان القسم عنوان القسم
                 </a>
               </li>
+
+              <li class="mobile-menu-item">
+                <a class="mobile-menu-link" data-bs-toggle="collapse" href="#collapseExample" role="button"
+                  aria-expanded="false" aria-controls="collapseExample">
+                  <img src="assets/images/icons/healthy-food.png" alt="harvest" />
+                  عنوان القسم عنوان القسم
+  
+                  <span class="collapse-arrow">
+                    <img src="assets/images/icons/down-arrow.png" alt="arrow">
+                  </span>
+                </a>
+  
+                <div class="collapse menu-collapse" id="collapseExample">
+                  <a class="collapse-link mobile-menu-link" href="products.html">
+                    <img src="assets/images/icons/lettuce.png" alt="harvest" />
+  
+                    عنوان القسم عنوان القسم
+                  </a>
+                  <a class="collapse-link mobile-menu-link" href="products.html">
+                    <img src="assets/images/icons/lettuce.png" alt="harvest" />
+  
+                    عنوان القسم عنوان القسم
+                  </a>
+                </div>
+              </li>
+
               <li class="mobile-menu-item">
                 <a class="mobile-menu-link" href="products.html">
                   <img src="assets/images/icons/peanut.png" alt="harvest" />
-
+  
                   عنوان القسم عنوان القسم
                 </a>
               </li>
+
               <li class="mobile-menu-item">
                 <a class="mobile-menu-link" href="products.html">
                   <img src="assets/images/icons/spray.png" alt="harvest" />
@@ -1916,14 +1943,14 @@
       </div>
 
       <ul class="nav nav-pills mobile-nav-tabs" id="pills-tab" role="tablist">
-        <li class="nav-item flex-grow-1 " role="presentation">
+        <li class="nav-item" role="presentation">
           <button class="mobile-tab tab-btn w-100 active" id="pills-menu-tab" data-bs-toggle="pill"
             data-bs-target="#pills-menu" type="button" role="tab" aria-controls="pills-menu" aria-selected="true">
             المنتجات
           </button>
         </li>
 
-        <li class="nav-item flex-grow-1 " role="presentation">
+        <li class="nav-item" role="presentation">
           <button class="mobile-tab tab-btn w-100" id="pills-home-tab" data-bs-toggle="pill"
             data-bs-target="#pills-home" type="button" role="tab" aria-controls="pills-home" aria-selected="true">
             القسم
